# OmniDiffusion

./: .gitignore  README.md  pyproject.toml
configs/: fine_tune.yaml  fine_tune2.yaml  fine_tune3.yaml  fine_tune_no_ema.yaml  fine_tune_ray.yaml  ft_bk_sdm_tiny.yaml  ft_bk_sdm_tiny_step_distill_16_8.yaml  ft_bk_sdm_tiny_step_distill_32_16.yaml  ft_bk_sdm_tiny_step_distill_64_32.yaml  ft_bk_sdm_tiny_vpred.yaml
omni_diffusion/: __main__.py  configs.py  mosaic.py  ray_main.py
omni_diffusion/data/: streaming_dataset.py
omni_diffusion/trainers/: base_trainer.py  sd_distiller.py  sd_trainer.py  sd_trainer2.py  sdxl_ray_trainer.py  sdxl_trainer.py
omni_diffusion/utils/: multi_source_dataloader.py
slurm_scripts/: slurm_train.slurm  test.slurm
tools/: convert_to_mds.py  eval.py  generate_evaluation_dataset_fake.py  generate_evaluation_dataset_real.py  process_laion.py  split_dataset.py
